--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="https://Miurahantou.github.io/Turn-Battle-Game/icon.ico">
+    <link rel="icon" href="./icon.ico">
     <title>ターン制戦闘ゲーム</title>
     <style>
         body {
