--- a/index.html
+++ b/index.html
@@ -203,8 +203,10 @@
             ) {
                 enemy.hp = enemy.hp - 5;
                 document.getElementById('enemy-hp').textContent = enemy.hp;
-                if (enemy.hp <= 0) alert('You win!');
-                visiblereset();
+                if (enemy.hp <= 0){
+                    alert('You win!');
+                    visiblereset();
+                }
             }
             enemyAction();
             renderField();
@@ -219,8 +221,10 @@
             ) {
                 enemy.hp = enemy.hp - 10;
                 document.getElementById('enemy-hp').textContent = enemy.hp;
-                if (enemy.hp <= 0) alert('You win!');
-                visiblereset();
+                if (enemy.hp <= 0){
+                    alert('You win!');
+                    visiblereset();
+                }
             }
             player.mp = player.mp - 20;
             document.getElementById('player-mp').textContent = player.mp;
@@ -276,8 +280,10 @@
                     player.hp = player.hp - 5;
                     document.getElementById('player-hp').textContent = player.hp;
                 }
-                if (player.hp <= 0) alert('Game Over!');
+                if (player.hp <= 0){
+                    alert('Game Over!');
                     visiblereset();
+                }
                 }
                 else{
                     if(enemy.mp >= 30){
